--- a/index.html
+++ b/index.html
@@ -2,13 +2,65 @@
 layout: home
 search_exclude: true
 ---
+<img src="images/me.jpg" alt="photo of Jason
+Fleischer" width="300" height="300" align="right" hspace="30"
+vspace="30">
 
-This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
+<p align="left"><h3>Jason G. Fleischer, Ph.D.</h3> Data Scientist<br>
+The Salk Institute for Biological Studies<br>
+La Jolla, California<br>
+<a href="mailto:jfleischer@salk.edu">jfleischer@salk.edu</a><br>
+<a href="https://twitter.com/jasongfleischer">@jasongfleischer</a> <br>
+</p>
 
-![]({{site.baseurl}}/images/diagram.png "https://github.com/fastai/fastpages")
 
-[fastpages](https://github.com/fastai/fastpages) automates the process of creating blog posts via GitHub Actions, so you don't have to fuss with conversion scripts.  A full list of features can be found on [GitHub](https://github.com/fastai/fastpages).  
+<span style='font-size:42px;'>&#128015;  &#x2693;</span>
 
-You can edit the `index.html` file to change this content.
+<p>I create
+          innovative methods for extracting knowledge from complex
+          biological datasets. &nbsp;I am particularly interested in
+          problems where its not even clear what the correct question to
+          ask is. &nbsp;I work in collaboration with <a
+          href="https://snl.salk.edu/%7Enavlakha/" >
+          Saket Navlakha</a> at The Salk Institute, where we
+          develop&nbsp;new algorithms to understand complex biological
+          networks, and also study the algorithms solved by natural
+          systems.<br>
+		  <br>
+		  
+Currently I am exploring changes in gene
+expression during aging with <a
+          href="https://hetzer.salk.edu/">Martin
+          Hetzer's lab.</a> In
+          particular I am interested in understanding if there are
+          molecular markers that can predict "biological age" as
+          distinct from chronological age. &nbsp;A method to correctly
+          predict biological age would be useful in understanding the
+          aging process, and would have applications in evaluating
+          treatments and in the clinic.<br>
+      <br>
+In collaboration with <a
+          href="https://panda.salk.edu/">Satchidananda
+          Panda's lab</a>, I am analyzing
+          human health data from clinical measures, actiwatches, and
+          smartphone apps. &nbsp;This combination of data allows us to
+          investigate relationships between circadian rhythms, sleep
+          patterns, light exposure, physical activity, and glucose
+          regulation. A better understanding of the interplay between
+          circadian and metabolic processes will help us develop
+          recommendations for a healthy lifestyle and may lead to
+          treatments for a variety of metabolic disorders.<br>
+      <br>
+In my previous
+          work I addressed questions about neural activity such as:
+          &nbsp;How do animals learn? How are memories formed and
+          maintained? &nbsp;How are those memories used to generate
+          flexible behavior as opposed to more rigid conditioned
+          responses? How do the complex interactions between brain,
+          body, and environment generate adaptive responses? <br>
+</p>
+    <p><br></p>
+
+
 
 # Posts
