fine tuning the rest of the blog setup

--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@ In collaboration with <a
       <br>
 In my previous
           work I addressed questions about neural activity such as:
-          &nbsp;How do animals learn? How are memories formed and
+          How are memories formed and
           maintained? &nbsp;How are those memories used to generate
           flexible behavior as opposed to more rigid conditioned
           responses? How do the complex interactions between brain,
           body, and environment generate adaptive responses? <br>
 </p>
-    <p><br></p>
+ 
 
 
 
-# Posts
+# Blog posts
