--- a/publications/index.html
+++ b/publications/index.html
@@ -73,7 +73,7 @@ window.onload = wrap_img;
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/argo-navis/about/">About Me</a><a class="page-link" href="/argo-navis/publications/">Publications</a><a class="page-link" href="/argo-navis/search/">Search</a><a class="page-link" href="/argo-navis/categories/">Tags</a></div>
+        <div class="trigger"><a class="page-link" href="/argo-navis/publications/">Publications</a><a class="page-link" href="/argo-navis/search/">Search</a><a class="page-link" href="/argo-navis/categories/">Tags</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
@@ -112,8 +112,87 @@ window.onload = wrap_img;
           <a href="https://dx.doi.org/10.1371/journal.pone.0162155">https://dx.doi.org/10.1371/journal.pone.0162155</a></li>
         <li>JG Fleischer (2014). Persistent activity through multiple
           mechanisms in a spiking network that solves DMS tasks.
-          Computational and Systems Neuroscience Meeting (COSYNE).</li>
-</ul>
+          Computational and Systems Neuroscience Meeting
+		  (COSYNE).</li>
+		  
+      <li>JG Fleischer and JA Gally (2013). A spiking neural network
+		  model of working memory can solve delayed match-to-sample
+          tasks and displays a serial position effect. Poster at The
+          Society for Neuroscience Annual Meeting.</li>
+        <li>JG Fleischer and AE Kozarev (2012). Perceptual grouping and
+          figure-ground segre- gation arising from short-term plasticity
+          in a spiking network. Computational and Systems Neuroscience
+          Meeting (COSYNE) .</li>
+        <li>JG Fleischer, JL McKinstry, DE Edelman, and GM Edelman
+          (2011). The Case For Using Brain-Based Devices To Study
+          Consciousness. In, JL Krichmar and H Wagatsuma (Eds.),
+          Neuromorphic and Brain-Based Robots: Trends and Perspectives,
+          Cambridge University Press, pp. 303–320.</li>
+        <li>JG Fleischer and GM Edelman (2009). Brain-based devices: An
+          embodied approach to linking nervous system structure and
+          function to behavior. IEEE Robotics &amp; Automation Magazine,
+          16(3):33–41. <a href="https://dx.doi.org/10.1109/MRA.2009.933621">https://dx.doi.org/10.1109/MRA.2009.933621</a></li>
+        <li>JG Fleischer and JL Krichmar (2007). Sensory integration and
+          remapping in a medial temporal lobe model during maze
+          navigation by a brain-based device. Journal of Integrative
+          Neuroscience, 6(3):403–431. <a href="http://dx.doi.org/10.1142/S0219635207001568">http://dx.doi.org/10.1142/S0219635207001568</a></li>
+        <li>JG Fleischer, JA Gally, GM Edelman, and JL Krichmar (2007).
+          Retrospective and prospective responses arising in a modeled
+          hippocampus during maze navigation by a brain-based device.
+          Proceedings of the National Academy of Sciences USA,
+          104(9):3556–3561.<a href=" https://doi.org/10.1073/pnas.0611571104"> https://doi.org/10.1073/pnas.0611571104</a></li>
+        <li>DA Nitz, WJ Kargo, and JG Fleischer (2007). Dopamine
+          signaling and the distal reward problem. Neuroreport,
+          18(17):1833–1836. <a href="https://doi.org/10.1097/WNR.0b013e3282f16d86">https://doi.org/10.1097/WNR.0b013e3282f16d86</a></li>
+        <li>JG Fleischer (2007). Neural correlates of anticipation in
+          cerebellum, basal ganglia, and hippocampus. In, MV Butz, O
+          Siguard, G Baldassarre, G Pezzulo (Eds.),, Anticipatory
+          Behavior in Adaptive Learning Systems: From Brains to
+          Individual and Social Behavior, Lecture Notes in Artificial
+          Intelligence. vol 4520, pp.19–34.</li>
+        <li>JG Fleischer, JA Gally, GM Edelman, and JL Krichmar (2007).
+          Different neural pathways lead to journey-dependent and
+          journey-independent place cell activity in an embodied model
+          of hippocampus. Poster at The Society for Neuroscience Annual
+          Meeting.</li>
+        <li>JG Fleischer, B Szatmary, DB Hutson, DA Moore, JA Snook, GM
+          Edelman, and JL Krichmar (2006). A neurally controlled robot
+          competes and cooperates with humans in Segway Soccer. In
+          Proceedings of the IEEE International Conference on Robotics
+          and Automation, pp.3673–3678</li>
+        <li>B Szatmary, JG Fleischer, DB Hutson, DA Moore, JA Snook, GM
+          Edelman, and JL Krichmar (2006). A Segway-based human-robot
+          soccer team. In Proceedings of the IEEE International
+          Conference on Robotics and Automation, pp.4436–4438.</li>
+        <li>JL Krichmar, AK Seth, DA Nitz, JG Fleischer, and GM Edelman
+          (2005). Spatial navigation and causal analysis in a
+          brain-based device modeling cortical-hippocampal
+          interactions. Neuroinformatics, 3(3):197–222. <a href="https://doi.org/10.1385/NI:3:3:197">https://doi.org/10.1385/NI:3:3:197</a></li>
+        <li>JG Fleischer (2004). Imitation is not enough for lexicon
+          learning In Proceedings of the Eighth International Conference
+          on Simulation of Adaptive Behavior, pp.477– 486.</li>
+        <li>JG Fleischer, SR Marsland, and JL Shapiro (2003). Sensory
+          Anticipation for Autonomous Selection of Robot Landmarks. In,
+          MV Butz, O Siguard, P Gerard (Eds.), Anticipatory Behavior in
+          Adaptive Learning Systems: Foundations, Theories, and Systems,
+          Lecture Notes in Artificial Intelligence. vol 2684,
+          pp.201–221.</li>
+        <li>JG Fleischer and SR Marsland (2002). Learning to
+          autonomously select landmarks for navigation and
+          communication. In Proceedings of the Seventh International
+          Conference on Simulation of Adaptive Behavior, pp. 151–160.</li>
+        <li>JG Fleischer and UDF Nehmzow (2001). Towards robots that
+          give each other navigational directions: Learning symbols for
+          perceptual categories. In Proceedings of the 3rd British
+          Conference on Autonomous Mobile Robotics and Autonomous
+          Systems. Dept. of Computer Science, University of Manchester
+          Technical Report UMCS-01-4-1.</li>
+        <li>JG Fleischer and WO Troxell (1999). Biomimicry as a tool in
+          the design of robotic systems. In Proceedings of the 3rd
+          International Conference on Engineering Design and Automation.
+          Integrated Technology Systems, Prospect, KY. <br />
+          </li>
+	  </ul>
 
   </div>
 
