--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ La Jolla, California<br>
 </p>
 
 
-<span style='font-size:42px;'>&#128015;  &#x2693;</span>
+<span style='font-size:42px;'>&#x1F947; &#128015;  &#x2693;</span>
 
 <p>I create
           innovative methods for extracting knowledge from complex
