--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ La Jolla, California<br />
 <a href="https://twitter.com/jasongfleischer">@jasongfleischer</a> <br />
 </p>
 
-<p><span style="font-size:42px;">🐏  ⚓</span></p>
+<p><span style="font-size:42px;">🥇 🐏  ⚓</span></p>
 
 <p>I create
           innovative methods for extracting knowledge from complex
