deploy: 73778dcd0a19f379aea78199c401ba4eaa76adda

--- a/publications/index.html
+++ b/publications/index.html
@@ -13,7 +13,7 @@
 <meta property="og:url" content="https://jasongfleischer.github.io/argo-navis/publications/" />
 <meta property="og:site_name" content="Argo Navis: data and science" />
 <script type="application/ld+json">
-{"description":"I prefer hand-crafted artisanal small-batch data. Especially if it’s barrel-aged.","@type":"WebPage","headline":"Publications","url":"https://jasongfleischer.github.io/argo-navis/publications/","@context":"https://schema.org"}</script>
+{"description":"I prefer hand-crafted artisanal small-batch data. Especially if it’s barrel-aged.","@type":"WebPage","url":"https://jasongfleischer.github.io/argo-navis/publications/","headline":"Publications","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/argo-navis/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://jasongfleischer.github.io/argo-navis/feed.xml" title="Argo Navis: data and science" /><link rel="shortcut icon" type="image/x-icon" href="/argo-navis/images/favicon.ico"><!-- Begin Jekyll SEO tag v2.6.1 -->
 <title>Publications | Argo Navis: data and science</title>
@@ -26,7 +26,7 @@
 <meta property="og:url" content="https://jasongfleischer.github.io/argo-navis/publications/" />
 <meta property="og:site_name" content="Argo Navis: data and science" />
 <script type="application/ld+json">
-{"description":"I prefer hand-crafted artisanal small-batch data. Especially if it’s barrel-aged.","@type":"WebPage","headline":"Publications","url":"https://jasongfleischer.github.io/argo-navis/publications/","@context":"https://schema.org"}</script>
+{"description":"I prefer hand-crafted artisanal small-batch data. Especially if it’s barrel-aged.","@type":"WebPage","url":"https://jasongfleischer.github.io/argo-navis/publications/","headline":"Publications","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
