--- a/publications/index.html
+++ b/publications/index.html
@@ -216,23 +216,62 @@ measures in overweight humans: a randomized trial. Obesity, 28: 860--869. <a hre
 
 <h1 id="other-writing">Other writing</h1>
 
-<p>Social distancing has probably saved more than 1,200 lives in San
+<ul>
+  <li>Social distancing has probably saved more than 1,200 lives in San
 Diego County. OpEd in San Diego Union-Tribune, April 23rd, 2020.
-https://www.sandiegouniontribune.com/opinion/story/2020-04-23/s</p>
+[https://www.sandiegouniontribune.com/opinion/story/2020-04-23/s]</li>
+</ul>
 
 <h1 id="media--press">Media / Press</h1>
 
-<p>https://www.voiceofsandiego.org/people/smart-talk-on-the-intelligence-explosion/</p>
+<ul>
+  <li>[https://www.voiceofsandiego.org/people/smart-talk-on-the-intelligence-explosion/]</li>
+</ul>
 
-<p>https://www.sandiegouniontribune.com/business/biotech/sd-me-salk-genetic-signs-aging-detected-20181224-story.html</p>
+<p>Genome Biology, 2018 paper (first author)</p>
+<ul>
+  <li>
+    <p>[https://www.sandiegouniontribune.com/business/biotech/sd-me-salk-genetic-signs-aging-detected-20181224-story.html]</p>
+  </li>
+  <li>
+    <p>[https://www.pewtrusts.org/en/research-and-analysis/articles/2019/02/08/clues-to-your-biological-age-may-be-only-skin-deep]</p>
+  </li>
+  <li>
+    <p>[https://www.techtimes.com/articles/236653/20181221/ai-can-predict-which-people-will-age-better-than-others.htm]</p>
+  </li>
+</ul>
 
-<p>https://theconversation.com/limited-eating-times-could-be-a-new-way-to-fight-obesity-and-diabetes-127154</p>
+<p>Science Advances, 2018 paper (middle author)</p>
+<ul>
+  <li>
+    <p>[https://www.npr.org/sections/health-shots/2018/12/12/676118782/sleepless-no-more-in-seattle-later-school-start-time-pays-off-for-teens]</p>
+  </li>
+  <li>
+    <p>[https://www.nbcnews.com/health/health-news/more-sleep-seattle-later-school-start-helps-kids-get-zzz-n947231]</p>
+  </li>
+  <li>
+    <p>[https://www.washingtonpost.com/national/health-science/at-these-schools-later-start-times-get-an-a-plus-for-youths-needing-more-sleep/2019/02/08/e1e6a23c-23ef-11e9-81fd-b7b05d5bed90_story.html]</p>
+  </li>
+  <li>
+    <p>[http://www.seattlemag.com/article/why-we-really-are-sleepless-seattle]</p>
+  </li>
+</ul>
 
-<p>https://www.npr.org/sections/thesalt/2019/12/08/785142534/eat-for-10-hours-fast-for-14-this-daily-habit-prompts-weight-loss-study-finds</p>
-
-<p>https://www.mdmag.com/medical-news/time-restricted-diet-metabolic-syndrome-pilot-study</p>
-
-<p>https://www.youtube.com/watch?v=NYTH6bztKnk&amp;feature=emb_logo</p>
+<p>Cell Metabolism. 2019 paper (middle author)</p>
+<ul>
+  <li>
+    <p>[https://theconversation.com/limited-eating-times-could-be-a-new-way-to-fight-obesity-and-diabetes-127154]</p>
+  </li>
+  <li>
+    <p>[https://www.npr.org/sections/thesalt/2019/12/08/785142534/eat-for-10-hours-fast-for-14-this-daily-habit-prompts-weight-loss-study-finds]</p>
+  </li>
+  <li>
+    <p>[https://www.mdmag.com/medical-news/time-restricted-diet-metabolic-syndrome-pilot-study]</p>
+  </li>
+  <li>
+    <p>[https://www.youtube.com/watch?v=NYTH6bztKnk&amp;feature=emb_logo]</p>
+  </li>
+</ul>
 
 
   </div>
