--- a/publications/index.html
+++ b/publications/index.html
@@ -217,7 +217,7 @@ measures in overweight humans: a randomized trial. Obesity, 28: 860--869. <a hre
 <h1 id="other-writing">Other writing</h1>
 
 <ul>
-  <li>[Social distancing has probably saved more than 1,200 lives in San Diego County]https://www.sandiegouniontribune.com/opinion/story/2020-04-23/) OpEd in San Diego Union-Tribune, April 23rd, 2020</li>
+  <li><a href="https://www.sandiegouniontribune.com/opinion/story/2020-04-23/">Social distancing has probably saved more than 1,200 lives in San Diego County</a> OpEd in San Diego Union-Tribune, April 23rd, 2020</li>
 </ul>
 
 <h1 id="media--press">Media / Press</h1>
