fixing up homepage and pubs

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ La Jolla, California<br>
 <a href="https://twitter.com/jasongfleischer">@jasongfleischer</a> <br>
 </p>
 
+<a href="cv.pdf">See my CV for a complete list of publications</a>
 
 <span style='font-size:42px;'>&#x1F947; &#128015;  &#x2693;</span>
 
