--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@ La Jolla, California<br />
 <a href="https://twitter.com/jasongfleischer">@jasongfleischer</a> <br />
 </p>
 
+<p><a href="cv.pdf">See my CV for a complete list of publications</a></p>
+
 <p><span style="font-size:42px;">🥇 🐏  ⚓</span></p>
 
 <p>I create
