fixing up homepage and pubs

--- a/index.html
+++ b/index.html
@@ -13,14 +13,12 @@ La Jolla, California<br>
 <a href="https://twitter.com/jasongfleischer">@jasongfleischer</a> <br>
 </p>
 
-<a href="cv.pdf">See my CV for a complete list of publications</a>
-
 <span style='font-size:42px;'>&#x1F947; &#128015;  &#x2693;</span>
 
 <p>I create
           innovative methods for extracting knowledge from complex
           biological datasets. &nbsp;I am particularly interested in
-          problems where its not even clear what the correct question to
+          problems where it's not even clear what the correct question to
           ask is. &nbsp;I work in collaboration with <a
           href="https://snl.salk.edu/%7Enavlakha/" >
           Saket Navlakha</a> at The Salk Institute, where we
@@ -37,8 +35,8 @@ expression during aging with <a
           molecular markers that can predict "biological age" as
           distinct from chronological age. &nbsp;A method to correctly
           predict biological age would be useful in understanding the
-          aging process, and would have applications in evaluating
-          treatments and in the clinic.<br>
+          aging process, and would have applications in the evaluation
+of treatments and in the clinic.<br>
       <br>
 In collaboration with <a
           href="https://panda.salk.edu/">Satchidananda
@@ -62,6 +60,7 @@ In my previous
 </p>
  
 
+<a href="cv.pdf">See my CV for a complete list of publications</a>
 
 
 # Blog posts
