deploy: 6386f2140db1055bd27d61e114f01370e068239e

--- a/index.html
+++ b/index.html
@@ -103,14 +103,12 @@ La Jolla, California<br />
 <a href="https://twitter.com/jasongfleischer">@jasongfleischer</a> <br />
 </p>
 
-<p><a href="cv.pdf">See my CV for a complete list of publications</a></p>
-
 <p><span style="font-size:42px;">🥇 🐏  ⚓</span></p>
 
 <p>I create
           innovative methods for extracting knowledge from complex
           biological datasets. &nbsp;I am particularly interested in
-          problems where its not even clear what the correct question to
+          problems where it's not even clear what the correct question to
           ask is. &nbsp;I work in collaboration with <a href="https://snl.salk.edu/%7Enavlakha/">
           Saket Navlakha</a> at The Salk Institute, where we
           develop&nbsp;new algorithms to understand complex biological
@@ -125,8 +123,8 @@ expression during aging with <a href="https://hetzer.salk.edu/">Martin
           molecular markers that can predict "biological age" as
           distinct from chronological age. &nbsp;A method to correctly
           predict biological age would be useful in understanding the
-          aging process, and would have applications in evaluating
-          treatments and in the clinic.<br />
+          aging process, and would have applications in the evaluation
+of treatments and in the clinic.<br />
       <br />
 In collaboration with <a href="https://panda.salk.edu/">Satchidananda
           Panda's lab</a>, I am analyzing
@@ -147,6 +145,8 @@ In my previous
           responses? How do the complex interactions between brain,
           body, and environment generate adaptive responses? <br />
 </p>
+
+<p><a href="cv.pdf">See my CV for a complete list of publications</a></p>
 
 <h1 id="blog-posts">Blog posts</h1>
 
