add twitter timeline to index

--- a/index.html
+++ b/index.html
@@ -62,5 +62,6 @@ In my previous
 
 <a href="cv.pdf">See my CV for a complete list of publications</a>
 
+{% twitter https://twitter.com/jasongfleischer maxwidth=500 limit=5 %}
 
 # Blog posts
