--- a/index.html
+++ b/index.html
@@ -148,6 +148,10 @@ In my previous
 
 <p><a href="cv.pdf">See my CV for a complete list of publications</a></p>
 
+<div class="jekyll-twitter-plugin"><a class="twitter-timeline" data-width="500" data-tweet-limit="5" href="https://twitter.com/jasongfleischer?ref_src=twsrc%5Etfw">Tweets by jasongfleischer</a>
+<script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+</div>
+
 <h1 id="blog-posts">Blog posts</h1>
 
 
