--- a/index.html
+++ b/index.html
@@ -62,6 +62,14 @@ In my previous
 
 <a href="cv.pdf">See my CV for a complete list of publications</a>
 
-{% twitter https://twitter.com/jasongfleischer maxwidth=500 limit=5 %}
+<div class="row">
+    <div class="col-md-6">
+      {{
+      # Blog posts
 
-# Blog posts
+      }}
+    </div>
+    <div class="col-md-6">
+      {% twitter https://twitter.com/jasongfleischer maxwidth=500 limit=5 %}
+    </div>
+</div>
