deploy: d898718bd508580fffa8a2a67f040df47a223c88

--- a/index.html
+++ b/index.html
@@ -148,11 +148,16 @@ In my previous
 
 <p><a href="cv.pdf">See my CV for a complete list of publications</a></p>
 
-<div class="jekyll-twitter-plugin"><a class="twitter-timeline" data-width="500" data-tweet-limit="5" href="https://twitter.com/jasongfleischer?ref_src=twsrc%5Etfw">Tweets by jasongfleischer</a>
+<div class="row">
+    <div class="col-md-6">
+      
+    </div>
+    <div class="col-md-6">
+      <div class="jekyll-twitter-plugin"><a class="twitter-timeline" data-width="500" data-tweet-limit="5" href="https://twitter.com/jasongfleischer?ref_src=twsrc%5Etfw">Tweets by jasongfleischer</a>
 <script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </div>
-
-<h1 id="blog-posts">Blog posts</h1>
+    </div>
+</div>
 
 
 
