attempt to make a two column layout for twitter and blog posts v 2

--- a/index.html
+++ b/index.html
@@ -62,14 +62,17 @@ In my previous
 
 <a href="cv.pdf">See my CV for a complete list of publications</a>
 
-<div class="row">
-    <div class="col-md-6">
-      {{
-      # Blog posts
+<div class="container">
+    <div class="row">
+        <div class="col-sm-8">
+	  {{
+	  # Blog posts
 
-      }}
-    </div>
-    <div class="col-md-6">
-      {% twitter https://twitter.com/jasongfleischer maxwidth=500 limit=5 %}
+	  }}
+	</div>
+	<div class="col-sm-4">
+	  {% twitter https://twitter.com/jasongfleischer maxwidth=500 limit=5 %}
+	</div>
     </div>
 </div>
+    
