deploy: ee7e1a6c625130f2de567d71f3a753d26933b783

--- a/index.html
+++ b/index.html
@@ -148,16 +148,19 @@ In my previous
 
 <p><a href="cv.pdf">See my CV for a complete list of publications</a></p>
 
-<div class="row">
-    <div class="col-md-6">
-      
-    </div>
-    <div class="col-md-6">
-      <div class="jekyll-twitter-plugin"><a class="twitter-timeline" data-width="500" data-tweet-limit="5" href="https://twitter.com/jasongfleischer?ref_src=twsrc%5Etfw">Tweets by jasongfleischer</a>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-8">
+	  
+	</div>
+	<div class="col-sm-4">
+	  <div class="jekyll-twitter-plugin"><a class="twitter-timeline" data-width="500" data-tweet-limit="5" href="https://twitter.com/jasongfleischer?ref_src=twsrc%5Etfw">Tweets by jasongfleischer</a>
 <script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </div>
+	</div>
     </div>
 </div>
+
 
 
 
