deploy: bdca2a9147c68a2143cc80122ad7e6dc60b732e6

--- a/index.html
+++ b/index.html
@@ -148,18 +148,24 @@ In my previous
 
 <p><a href="cv.pdf">See my CV for a complete list of publications</a></p>
 
-<div class="container">
-    <div class="row">
-        <div class="col-sm-8">
-	  
-	</div>
-	<div class="col-sm-4">
-	  <div class="jekyll-twitter-plugin"><a class="twitter-timeline" data-width="500" data-tweet-limit="5" href="https://twitter.com/jasongfleischer?ref_src=twsrc%5Etfw">Tweets by jasongfleischer</a>
+<style>
+table th:first-of-type {
+    width: 60%;
+}
+table th:nth-of-type(2) {
+    width: 10%;
+}
+table th:nth-of-type(3) {
+    width: 30%;
+}
+
+</style>
+
+<p>| —- | —- | —- |
+| # Blog posts |   | &lt;div class='jekyll-twitter-plugin'&gt;<a class="twitter-timeline" data-width="500" data-tweet-limit="5" href="https://twitter.com/jasongfleischer?ref_src=twsrc%5Etfw">Tweets by jasongfleischer</a>
 <script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-</div>
-	</div>
-    </div>
-</div>
+&lt;/div&gt; |
+| —- | —- | —- |</p>
 
 
 
