deploy: 35547bdb52893a8d8cb2255d561fc95a706e5885

--- a/index.html
+++ b/index.html
@@ -94,39 +94,47 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p><img src="images/me.jpg" alt="photo of Jason Fleischer" width="300" height="300" align="right" hspace="30" vspace="30" /></p>
+        <div class="home"><div class="container">
+    <div class="row">
+       <div class="col-sm">
+	 <h3>Jason G. Fleischer, Ph.D.</h3>
+	 Data Scientist<br />
+	 The Salk Institute for Biological Studies<br />
+	 La Jolla, California<br />
+	 <a href="mailto:jfleischer@salk.edu">jfleischer@salk.edu</a><br />
+	 <a href="https://twitter.com/jasongfleischer">@jasongfleischer</a><br />
+	 <a href="cv.pdf">CV</a><br />
+	 <span style="font-size:42px;">&#x1F947; &#128015;  &#x2693;</span>
+	</div>
+	<div class="col-sm">
+	  <img src="images/me.jpg" alt="photo of Jason Fleischer" width="250" height="250" />
+	</div>
+    </div>
+    <div class="row">
+        <div class="col-sm">
+	  I create
+	  innovative methods for extracting knowledge from complex
+	  biological datasets. &nbsp;I am particularly interested in
+	  problems where it's not even clear what the correct question to
+	  ask is. &nbsp;I work in collaboration with <a href="https://snl.salk.edu/%7Enavlakha/">
+	  Saket Navlakha</a> at The Salk Institute, where we
+	  develop&nbsp;new algorithms to understand complex biological
+	  networks, and also study the algorithms solved by natural
+	  systems.<br />
+	  <br />
 
-<p align="left"><h3>Jason G. Fleischer, Ph.D.</h3> Data Scientist<br />
-The Salk Institute for Biological Studies<br />
-La Jolla, California<br />
-<a href="mailto:jfleischer@salk.edu">jfleischer@salk.edu</a><br />
-<a href="https://twitter.com/jasongfleischer">@jasongfleischer</a> <br />
-</p>
+	  Currently I am exploring changes in gene
+	  expression during aging with <a href="https://hetzer.salk.edu/">Martin
+	  Hetzer's lab.</a> In
+	  particular I am interested in understanding if there are
+	  molecular markers that can predict "biological age" as
+	  distinct from chronological age. &nbsp;A method to correctly
+	  predict biological age would be useful in understanding the
+	  aging process, and would have applications in the evaluation
+	  of treatments and in the clinic.<br />
+	  <br />
 
-<p><span style="font-size:42px;">🥇 🐏  ⚓</span></p>
-
-<p>I create
-          innovative methods for extracting knowledge from complex
-          biological datasets. &nbsp;I am particularly interested in
-          problems where it's not even clear what the correct question to
-          ask is. &nbsp;I work in collaboration with <a href="https://snl.salk.edu/%7Enavlakha/">
-          Saket Navlakha</a> at The Salk Institute, where we
-          develop&nbsp;new algorithms to understand complex biological
-          networks, and also study the algorithms solved by natural
-          systems.<br />
-		  <br />
-		  
-Currently I am exploring changes in gene
-expression during aging with <a href="https://hetzer.salk.edu/">Martin
-          Hetzer's lab.</a> In
-          particular I am interested in understanding if there are
-          molecular markers that can predict "biological age" as
-          distinct from chronological age. &nbsp;A method to correctly
-          predict biological age would be useful in understanding the
-          aging process, and would have applications in the evaluation
-of treatments and in the clinic.<br />
-      <br />
-In collaboration with <a href="https://panda.salk.edu/">Satchidananda
+	  In collaboration with <a href="https://panda.salk.edu/">Satchidananda
           Panda's lab</a>, I am analyzing
           human health data from clinical measures, actiwatches, and
           smartphone apps. &nbsp;This combination of data allows us to
@@ -135,31 +143,26 @@ In collaboration with <a href="https://panda.salk.edu/">Satchidananda
           regulation. A better understanding of the interplay between
           circadian and metabolic processes will help us develop
           recommendations for a healthy lifestyle and may lead to
-          treatments for a variety of metabolic disorders.<br />
-      <br />
-In my previous
-          work I addressed questions about neural activity such as:
-          How are memories formed and
-          maintained? &nbsp;How are those memories used to generate
-          flexible behavior as opposed to more rigid conditioned
-          responses? How do the complex interactions between brain,
-          body, and environment generate adaptive responses? <br />
-</p>
+	  treatments for a variety of metabolic disorders.<br />
+	  <br />
 
-<p><a href="cv.pdf">See my CV for a complete list of publications</a></p>
-
-<div class="container">
-    <div class="row">
-        <div class="col-sm-8">
-	  
+	  In my previous
+	  work I addressed questions about neural activity such as:
+	  How are memories formed and
+	  maintained? &nbsp;How are those memories used to generate
+	  flexible behavior as opposed to more rigid conditioned
+	  responses? How do the complex interactions between brain,
+	  body, and environment generate adaptive responses? <br /> <br />
 	</div>
-	<div class="col-sm-4">
-	  <div class="jekyll-twitter-plugin"><a class="twitter-timeline" data-width="500" data-tweet-limit="5" href="https://twitter.com/jasongfleischer?ref_src=twsrc%5Etfw">Tweets by jasongfleischer</a>
+	<div class="col-sm">
+	   <div class="jekyll-twitter-plugin"><a class="twitter-timeline" data-width="300" data-tweet-limit="5" href="https://twitter.com/jasongfleischer?ref_src=twsrc%5Etfw">Tweets by jasongfleischer</a>
 <script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </div>
 	</div>
     </div>
 </div>
+
+<p># Blog posts</p>
 
 
 
