just putzing about since none of this is working

--- a/index.html
+++ b/index.html
@@ -2,26 +2,27 @@
 layout: home
 search_exclude: true
 ---
+|----|----|----|
+| test |  | table |
+|----|----|----|
 
-<div class="container">
-    <div class="row">
-       <div class="col-sm">
-	 <h3>Jason G. Fleischer, Ph.D.</h3>
-	 Data Scientist<br>
-	 The Salk Institute for Biological Studies<br>
-	 La Jolla, California<br>
-	 <a href="mailto:jfleischer@salk.edu">jfleischer@salk.edu</a><br>
-	 <a href="https://twitter.com/jasongfleischer">@jasongfleischer</a><br>
-	 <a href="cv.pdf">CV</a><br>
-	 <span style='font-size:42px;'>&#x1F947; &#128015;  &#x2693;</span>
-	</div>
-	<div class="col-sm">
-	  <img src="images/me.jpg" alt="photo of Jason Fleischer"
-	  width="250" height="250">
+ <img src="images/me.jpg" alt="photo of Jason Fleischer"
+width="250" height="250" align="right">
+
+### Jason G. Fleischer, Ph.D.
+Data Scientist<br>
+The Salk Institute for Biological Studies<br>
+La Jolla, California<br>
+<a href="mailto:jfleischer@salk.edu">jfleischer@salk.edu</a><br>
+<a href="https://twitter.com/jasongfleischer">@jasongfleischer</a><br>
+<a href="cv.pdf">CV</a><br>
+<span style='font-size:42px;'>&#x1F947; &#128015;  &#x2693;</span>
+
+	 
 	</div>
     </div>
     <div class="row">
-        <div class="col-sm">
+        <div class="col">
 	  I create
 	  innovative methods for extracting knowledge from complex
 	  biological datasets. &nbsp;I am particularly interested in
@@ -67,11 +68,11 @@ search_exclude: true
 	  responses? How do the complex interactions between brain,
 	  body, and environment generate adaptive responses? <br> <br>
 	</div>
-	<div class="col-sm">
+	<div class="co">
 	   {% twitter https://twitter.com/jasongfleischer maxwidth=300 limit=5 %}
 	</div>
     </div>
 </div>
 	  
- # Blog posts
+<h2>Blog posts</h2>
     
