just putzing about since none of this is working

--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 layout: home
 search_exclude: true
 ---
+
+
 |----|----|----|
 | test |  | table |
 |----|----|----|
+
 
  <img src="images/me.jpg" alt="photo of Jason Fleischer"
 width="250" height="250" align="right">
@@ -18,61 +21,52 @@ La Jolla, California<br>
 <a href="cv.pdf">CV</a><br>
 <span style='font-size:42px;'>&#x1F947; &#128015;  &#x2693;</span>
 
-	 
-	</div>
-    </div>
-    <div class="row">
-        <div class="col">
-	  I create
-	  innovative methods for extracting knowledge from complex
-	  biological datasets. &nbsp;I am particularly interested in
-	  problems where it's not even clear what the correct question to
-	  ask is. &nbsp;I work in collaboration with <a
-	  href="https://snl.salk.edu/%7Enavlakha/" >
-	  Saket Navlakha</a> at The Salk Institute, where we
-	  develop&nbsp;new algorithms to understand complex biological
-	  networks, and also study the algorithms solved by natural
-	  systems.<br>
-	  <br>
 
-	  Currently I am exploring changes in gene
-	  expression during aging with <a
-	  href="https://hetzer.salk.edu/">Martin
-	  Hetzer's lab.</a> In
-	  particular I am interested in understanding if there are
-	  molecular markers that can predict "biological age" as
-	  distinct from chronological age. &nbsp;A method to correctly
-	  predict biological age would be useful in understanding the
-	  aging process, and would have applications in the evaluation
-	  of treatments and in the clinic.<br>
-	  <br>
 
-	  In collaboration with <a
-	  href="https://panda.salk.edu/">Satchidananda
-          Panda's lab</a>, I am analyzing
-          human health data from clinical measures, actiwatches, and
-          smartphone apps. &nbsp;This combination of data allows us to
-          investigate relationships between circadian rhythms, sleep
-          patterns, light exposure, physical activity, and glucose
-          regulation. A better understanding of the interplay between
-          circadian and metabolic processes will help us develop
-          recommendations for a healthy lifestyle and may lead to
-	  treatments for a variety of metabolic disorders.<br>
-	  <br>
 
-	  In my previous
-	  work I addressed questions about neural activity such as:
-	  How are memories formed and
-	  maintained? &nbsp;How are those memories used to generate
-	  flexible behavior as opposed to more rigid conditioned
-	  responses? How do the complex interactions between brain,
-	  body, and environment generate adaptive responses? <br> <br>
-	</div>
-	<div class="co">
-	   {% twitter https://twitter.com/jasongfleischer maxwidth=300 limit=5 %}
-	</div>
-    </div>
-</div>
-	  
-<h2>Blog posts</h2>
+
+I create
+innovative methods for extracting knowledge from complex
+biological datasets. I am particularly interested in
+problems where it's not even clear what the correct question to
+ask is. I work in collaboration with <a href="https://snl.salk.edu/%7Enavlakha/" >
+Saket Navlakha</a> at The Salk Institute, where we
+develop new algorithms to understand complex biological
+networks, and also study the algorithms solved by natural
+systems.
+
+{% twitter https://twitter.com/jasongfleischer maxwidth=300
+alight='right' limit=5 %}
+
+Currently I am exploring changes in gene expression during aging with <a
+href="https://hetzer.salk.edu/">Martin Hetzer's lab.</a> In
+particular I am interested in understanding if there are
+molecular markers that can predict "biological age" as
+distinct from chronological age. A method to correctly
+predict biological age would be useful in understanding the
+aging process, and would have applications in the evaluation
+of treatments and in the clinic
+
+In collaboration with <a href="https://panda.salk.edu/">Satchidananda
+Panda's lab</a>, I am analyzing
+human health data from clinical measures, actiwatches, and
+smartphone apps. This combination of data allows us to
+investigate relationships between circadian rhythms, sleep
+patterns, light exposure, physical activity, and glucose
+regulation. A better understanding of the interplay between
+circadian and metabolic processes will help us develop
+recommendations for a healthy lifestyle and may lead to
+treatments for a variety of metabolic disorders.
+
+
+In my previous
+work I addressed questions about neural activity such as:
+How are memories formed and
+maintained? &nbsp;How are those memories used to generate
+flexible behavior as opposed to more rigid conditioned
+responses? How do the complex interactions between brain,
+body, and environment generate adaptive responses? 
+
+
+## Blog posts
     
