just putzing about since none of this is working

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@ search_exclude: true
 ---
 
 
-|----|----|----|
+
 | test |  | table |
-|----|----|----|
+|:----|----|----:|
+| test | this | stuff |
 
 
  <img src="images/me.jpg" alt="photo of Jason Fleischer"
@@ -35,8 +36,10 @@ develop new algorithms to understand complex biological
 networks, and also study the algorithms solved by natural
 systems.
 
+<div style="float: right"> 
 {% twitter https://twitter.com/jasongfleischer maxwidth=300
 alight='right' limit=5 %}
+</div>
 
 Currently I am exploring changes in gene expression during aging with <a
 href="https://hetzer.salk.edu/">Martin Hetzer's lab.</a> In
