deploy: 17547f8486bd178f0a0984451465922810ec337b

--- a/index.html
+++ b/index.html
@@ -94,9 +94,22 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>|—-|—-|—-|
-| test |  | table |
-|—-|—-|—-|</p>
+        <div class="home"><table>
+  <thead>
+    <tr>
+      <th style="text-align: left">test</th>
+      <th> </th>
+      <th style="text-align: right">table</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td style="text-align: left">test</td>
+      <td>this</td>
+      <td style="text-align: right">stuff</td>
+    </tr>
+  </tbody>
+</table>
 
 <p><img src="images/me.jpg" alt="photo of Jason Fleischer" width="250" height="250" align="right" /></p>
 
@@ -119,8 +132,10 @@ develop new algorithms to understand complex biological
 networks, and also study the algorithms solved by natural
 systems.</p>
 
+<div style="float: right"> 
 <div class="jekyll-twitter-plugin"><a class="twitter-timeline" data-width="300" data-tweet-limit="5" href="https://twitter.com/jasongfleischer?ref_src=twsrc%5Etfw">Tweets by jasongfleischer</a>
 <script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+</div>
 </div>
 
 <p>Currently I am exploring changes in gene expression during aging with <a href="https://hetzer.salk.edu/">Martin Hetzer’s lab.</a> In
