--- a/index.html
+++ b/index.html
@@ -3,69 +3,47 @@ layout: home
 search_exclude: true
 ---
 
-
-
-| test |  | table |
-|:----|----|----:|
-| test | this | stuff |
-
-
- <img src="images/me.jpg" alt="photo of Jason Fleischer"
-width="250" height="250" align="right">
-
 ### Jason G. Fleischer, Ph.D.
 Data Scientist<br>
 The Salk Institute for Biological Studies<br>
 La Jolla, California<br>
 <a href="mailto:jfleischer@salk.edu">jfleischer@salk.edu</a><br>
-<a href="https://twitter.com/jasongfleischer">@jasongfleischer</a><br>
-<a href="cv.pdf">CV</a><br>
-<span style='font-size:42px;'>&#x1F947; &#128015;  &#x2693;</span>
+<a href="cv.pdf">my CV</a><br>
 
-
-
-
-
-I create
-innovative methods for extracting knowledge from complex
-biological datasets. I am particularly interested in
-problems where it's not even clear what the correct question to
-ask is. I work in collaboration with <a href="https://snl.salk.edu/%7Enavlakha/" >
-Saket Navlakha</a> at The Salk Institute, where we
-develop new algorithms to understand complex biological
-networks, and also study the algorithms solved by natural
-systems.
 
 <div style="float: right"> 
-{% twitter https://twitter.com/jasongfleischer maxwidth=300
+{% twitter https://twitter.com/jasongfleischer maxwidth=250
 alight='right' limit=5 %}
 </div>
 
-Currently I am exploring changes in gene expression during aging with <a
-href="https://hetzer.salk.edu/">Martin Hetzer's lab.</a> In
+Currently I am exploring changes in gene expression during aging with
+the labs of <a
+href="https://hetzer.salk.edu/">Martin Hetzer</a> and <a
+href="https://navlakhalab.net/">
+Saket Navlakha</a> In
 particular I am interested in understanding if there are
 molecular markers that can predict "biological age" as
 distinct from chronological age. A method to correctly
 predict biological age would be useful in understanding the
 aging process, and would have applications in the evaluation
-of treatments and in the clinic
+of treatments and in the clinic.
 
-In collaboration with <a href="https://panda.salk.edu/">Satchidananda
-Panda's lab</a>, I am analyzing
+In collaboration with the labs of <a href="https://panda.salk.edu/">Satchidananda
+Panda</a> and <a
+href="http://depts.washington.edu/delaiglesialab/wordpress/">Horacio
+de la Iglesia</a>, I am analyzing
 human health data from clinical measures, actiwatches, and
 smartphone apps. This combination of data allows us to
 investigate relationships between circadian rhythms, sleep
-patterns, light exposure, physical activity, and glucose
+patterns, light exposure, behavior, and glucose
 regulation. A better understanding of the interplay between
 circadian and metabolic processes will help us develop
-recommendations for a healthy lifestyle and may lead to
-treatments for a variety of metabolic disorders.
+recommendations for a healthy lifestyle and good public policy.
 
 
-In my previous
-work I addressed questions about neural activity such as:
+In previous work I used computational neural models to ask questions such as:  
 How are memories formed and
-maintained? &nbsp;How are those memories used to generate
+maintained? How are those memories used to generate
 flexible behavior as opposed to more rigid conditioned
 responses? How do the complex interactions between brain,
 body, and environment generate adaptive responses? 
