deploy: f1aa3ab3b6f1145c9d37958107a89e455c50975a

--- a/index.html
+++ b/index.html
@@ -94,73 +94,43 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><table>
-  <thead>
-    <tr>
-      <th style="text-align: left">test</th>
-      <th> </th>
-      <th style="text-align: right">table</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td style="text-align: left">test</td>
-      <td>this</td>
-      <td style="text-align: right">stuff</td>
-    </tr>
-  </tbody>
-</table>
-
-<p><img src="images/me.jpg" alt="photo of Jason Fleischer" width="250" height="250" align="right" /></p>
-
-<h3 id="jason-g-fleischer-phd">Jason G. Fleischer, Ph.D.</h3>
+        <div class="home"><h3 id="jason-g-fleischer-phd">Jason G. Fleischer, Ph.D.</h3>
 <p>Data Scientist<br />
 The Salk Institute for Biological Studies<br />
 La Jolla, California<br />
 <a href="mailto:jfleischer@salk.edu">jfleischer@salk.edu</a><br />
-<a href="https://twitter.com/jasongfleischer">@jasongfleischer</a><br />
-<a href="cv.pdf">CV</a><br />
-<span style="font-size:42px;">🥇 🐏  ⚓</span></p>
-
-<p>I create
-innovative methods for extracting knowledge from complex
-biological datasets. I am particularly interested in
-problems where it’s not even clear what the correct question to
-ask is. I work in collaboration with <a href="https://snl.salk.edu/%7Enavlakha/">
-Saket Navlakha</a> at The Salk Institute, where we
-develop new algorithms to understand complex biological
-networks, and also study the algorithms solved by natural
-systems.</p>
+<a href="cv.pdf">my CV</a><br /></p>
 
 <div style="float: right"> 
-<div class="jekyll-twitter-plugin"><a class="twitter-timeline" data-width="300" data-tweet-limit="5" href="https://twitter.com/jasongfleischer?ref_src=twsrc%5Etfw">Tweets by jasongfleischer</a>
+<div class="jekyll-twitter-plugin"><a class="twitter-timeline" data-width="250" data-tweet-limit="5" href="https://twitter.com/jasongfleischer?ref_src=twsrc%5Etfw">Tweets by jasongfleischer</a>
 <script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </div>
 </div>
 
-<p>Currently I am exploring changes in gene expression during aging with <a href="https://hetzer.salk.edu/">Martin Hetzer’s lab.</a> In
+<p>Currently I am exploring changes in gene expression during aging with
+the labs of <a href="https://hetzer.salk.edu/">Martin Hetzer</a> and <a href="https://navlakhalab.net/">
+Saket Navlakha</a> In
 particular I am interested in understanding if there are
 molecular markers that can predict “biological age” as
 distinct from chronological age. A method to correctly
 predict biological age would be useful in understanding the
 aging process, and would have applications in the evaluation
-of treatments and in the clinic</p>
+of treatments and in the clinic.</p>
 
-<p>In collaboration with <a href="https://panda.salk.edu/">Satchidananda
-Panda’s lab</a>, I am analyzing
+<p>In collaboration with the labs of <a href="https://panda.salk.edu/">Satchidananda
+Panda</a> and <a href="http://depts.washington.edu/delaiglesialab/wordpress/">Horacio
+de la Iglesia</a>, I am analyzing
 human health data from clinical measures, actiwatches, and
 smartphone apps. This combination of data allows us to
 investigate relationships between circadian rhythms, sleep
-patterns, light exposure, physical activity, and glucose
+patterns, light exposure, behavior, and glucose
 regulation. A better understanding of the interplay between
 circadian and metabolic processes will help us develop
-recommendations for a healthy lifestyle and may lead to
-treatments for a variety of metabolic disorders.</p>
+recommendations for a healthy lifestyle and good public policy.</p>
 
-<p>In my previous
-work I addressed questions about neural activity such as:
+<p>In previous work I used computational neural models to ask questions such as:<br />
 How are memories formed and
-maintained?  How are those memories used to generate
+maintained? How are those memories used to generate
 flexible behavior as opposed to more rigid conditioned
 responses? How do the complex interactions between brain,
 body, and environment generate adaptive responses?</p>
