--- a/index.html
+++ b/index.html
@@ -3,25 +3,26 @@ layout: home
 search_exclude: true
 ---
 
-### Jason G. Fleischer, Ph.D.
-Data Scientist<br>
-The Salk Institute for Biological Studies<br>
-La Jolla, California<br>
-<a href="mailto:jfleischer@salk.edu">jfleischer@salk.edu</a><br>
-<a href="cv.pdf">my CV</a><br>
-
-
-<div style="float: right"> 
-{% twitter https://twitter.com/jasongfleischer maxwidth=250
-alight='right' limit=5 %}
+<div style="float: right">
+  ### Jason G. Fleischer, Ph.D.
+  Data Scientist<br>
+  The Salk Institute<br>
+  or Biological Studies<br>
+  La Jolla, California<br>
+  <a href="mailto:jfleischer@salk.edu">jfleischer@salk.edu</a><br>
+  <a href="cv.pdf">my CV</a><br>
+  
+  {% twitter https://twitter.com/jasongfleischer maxwidth=250
+  alight='right' limit=5 %}
 </div>
 
-Currently I am exploring changes in gene expression during aging with
+## Research
+
+I explore changes in gene expression during aging with
 the labs of <a
 href="https://hetzer.salk.edu/">Martin Hetzer</a> and <a
 href="https://navlakhalab.net/">
-Saket Navlakha</a> In
-particular I am interested in understanding if there are
+Saket Navlakha</a> I am interested in understanding if there are
 molecular markers that can predict "biological age" as
 distinct from chronological age. A method to correctly
 predict biological age would be useful in understanding the
@@ -31,7 +32,7 @@ of treatments and in the clinic.
 In collaboration with the labs of <a href="https://panda.salk.edu/">Satchidananda
 Panda</a> and <a
 href="http://depts.washington.edu/delaiglesialab/wordpress/">Horacio
-de la Iglesia</a>, I am analyzing
+de la Iglesia</a>, I analyze
 human health data from clinical measures, actiwatches, and
 smartphone apps. This combination of data allows us to
 investigate relationships between circadian rhythms, sleep
@@ -41,9 +42,8 @@ circadian and metabolic processes will help us develop
 recommendations for a healthy lifestyle and good public policy.
 
 
-In previous work I used computational neural models to ask questions such as:  
-How are memories formed and
-maintained? How are those memories used to generate
+In previous work I used computational neural models to ask questions such as:
+How are memories formed and maintained? How are those memories used to generate
 flexible behavior as opposed to more rigid conditioned
 responses? How do the complex interactions between brain,
 body, and environment generate adaptive responses? 
