deploy: 4573087c62905f20b138ff85cdb9eca4cb287c3e

--- a/index.html
+++ b/index.html
@@ -94,23 +94,25 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><h3 id="jason-g-fleischer-phd">Jason G. Fleischer, Ph.D.</h3>
-<p>Data Scientist<br />
-The Salk Institute for Biological Studies<br />
-La Jolla, California<br />
-<a href="mailto:jfleischer@salk.edu">jfleischer@salk.edu</a><br />
-<a href="cv.pdf">my CV</a><br /></p>
-
-<div style="float: right"> 
-<div class="jekyll-twitter-plugin"><a class="twitter-timeline" data-width="250" data-tweet-limit="5" href="https://twitter.com/jasongfleischer?ref_src=twsrc%5Etfw">Tweets by jasongfleischer</a>
+        <div class="home"><div style="float: right">
+  ### Jason G. Fleischer, Ph.D.
+  Data Scientist<br />
+  The Salk Institute<br />
+  or Biological Studies<br />
+  La Jolla, California<br />
+  <a href="mailto:jfleischer@salk.edu">jfleischer@salk.edu</a><br />
+  <a href="cv.pdf">my CV</a><br />
+  
+  <div class="jekyll-twitter-plugin"><a class="twitter-timeline" data-width="250" data-tweet-limit="5" href="https://twitter.com/jasongfleischer?ref_src=twsrc%5Etfw">Tweets by jasongfleischer</a>
 <script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </div>
 </div>
 
-<p>Currently I am exploring changes in gene expression during aging with
+<h2 id="research">Research</h2>
+
+<p>I explore changes in gene expression during aging with
 the labs of <a href="https://hetzer.salk.edu/">Martin Hetzer</a> and <a href="https://navlakhalab.net/">
-Saket Navlakha</a> In
-particular I am interested in understanding if there are
+Saket Navlakha</a> I am interested in understanding if there are
 molecular markers that can predict “biological age” as
 distinct from chronological age. A method to correctly
 predict biological age would be useful in understanding the
@@ -119,7 +121,7 @@ of treatments and in the clinic.</p>
 
 <p>In collaboration with the labs of <a href="https://panda.salk.edu/">Satchidananda
 Panda</a> and <a href="http://depts.washington.edu/delaiglesialab/wordpress/">Horacio
-de la Iglesia</a>, I am analyzing
+de la Iglesia</a>, I analyze
 human health data from clinical measures, actiwatches, and
 smartphone apps. This combination of data allows us to
 investigate relationships between circadian rhythms, sleep
@@ -128,9 +130,8 @@ regulation. A better understanding of the interplay between
 circadian and metabolic processes will help us develop
 recommendations for a healthy lifestyle and good public policy.</p>
 
-<p>In previous work I used computational neural models to ask questions such as:<br />
-How are memories formed and
-maintained? How are those memories used to generate
+<p>In previous work I used computational neural models to ask questions such as:
+How are memories formed and maintained? How are those memories used to generate
 flexible behavior as opposed to more rigid conditioned
 responses? How do the complex interactions between brain,
 body, and environment generate adaptive responses?</p>
