move name back to top, add right align in float element

--- a/index.html
+++ b/index.html
@@ -3,17 +3,24 @@ layout: home
 search_exclude: true
 ---
 
+ # Jason G. Fleischer, Ph.D.
+{: style="text-align: center"}
+
 <div style="float: right">
-  ### Jason G. Fleischer, Ph.D.
-  Data Scientist<br>
-  The Salk Institute<br>
-  or Biological Studies<br>
-  La Jolla, California<br>
-  <a href="mailto:jfleischer@salk.edu">jfleischer@salk.edu</a><br>
-  <a href="cv.pdf">my CV</a><br>
+  
+  Data Scientist  
+  The Salk Institute  
+  for Biological Studies
+  La Jolla, California  
+  {: style="text-align: right"}
+  
+  <a href="mailto:jfleischer@salk.edu">jfleischer@salk.edu</a>  
+  <a href="cv.pdf">my CV</a>
+  {: style="text-align: center"}
   
   {% twitter https://twitter.com/jasongfleischer maxwidth=250
-  alight='right' limit=5 %}
+  align='right' limit=5 %}
+
 </div>
 
 ## Research
