deploy: db98a2d16d2cca20e6cbfe998ed88ccf67a4a464

--- a/index.html
+++ b/index.html
@@ -94,18 +94,24 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><div style="float: right">
-  ### Jason G. Fleischer, Ph.D.
-  Data Scientist<br />
-  The Salk Institute<br />
-  or Biological Studies<br />
-  La Jolla, California<br />
-  <a href="mailto:jfleischer@salk.edu">jfleischer@salk.edu</a><br />
-  <a href="cv.pdf">my CV</a><br />
+        <div class="home"><p style="text-align: center"># Jason G. Fleischer, Ph.D.</p>
+
+<div style="float: right">
+  
+  Data Scientist  
+  The Salk Institute  
+  for Biological Studies
+  La Jolla, California  
+  {: style="text-align: right"}
+  
+  <a href="mailto:jfleischer@salk.edu">jfleischer@salk.edu</a>  
+  <a href="cv.pdf">my CV</a>
+  {: style="text-align: center"}
   
   <div class="jekyll-twitter-plugin"><a class="twitter-timeline" data-width="250" data-tweet-limit="5" href="https://twitter.com/jasongfleischer?ref_src=twsrc%5Etfw">Tweets by jasongfleischer</a>
 <script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </div>
+
 </div>
 
 <h2 id="research">Research</h2>
