--- a/index.html
+++ b/index.html
@@ -3,20 +3,17 @@ layout: home
 search_exclude: true
 ---
 
- # Jason G. Fleischer, Ph.D.
+# Jason G. Fleischer, Ph.D.
 {: style="text-align: center"}
 
-<div style="float: right">
-  
-  Data Scientist  
-  The Salk Institute  
-  for Biological Studies
-  La Jolla, California  
-  {: style="text-align: right"}
-  
-  <a href="mailto:jfleischer@salk.edu">jfleischer@salk.edu</a>  
-  <a href="cv.pdf">my CV</a>
-  {: style="text-align: center"}
+<div style="float: right align: right">
+  Data Scientist<br>  
+  The Salk Institute<br>  
+  for Biological Studies<br>
+  <br>
+  <a href="mailto:jfleischer@salk.edu">jfleischer@salk.edu</a><br>
+  <a href="cv.pdf">my CV</a><br>
+  <br>
   
   {% twitter https://twitter.com/jasongfleischer maxwidth=250
   align='right' limit=5 %}
