deploy: 655818aee73fe02037d631bbc2a44b64a5896f6f

--- a/index.html
+++ b/index.html
@@ -94,19 +94,16 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p style="text-align: center"># Jason G. Fleischer, Ph.D.</p>
+        <div class="home"><h1 style="text-align: center" id="jason-g-fleischer-phd">Jason G. Fleischer, Ph.D.</h1>
 
-<div style="float: right">
-  
-  Data Scientist  
-  The Salk Institute  
-  for Biological Studies
-  La Jolla, California  
-  {: style="text-align: right"}
-  
-  <a href="mailto:jfleischer@salk.edu">jfleischer@salk.edu</a>  
-  <a href="cv.pdf">my CV</a>
-  {: style="text-align: center"}
+<div style="float: right align: right">
+  Data Scientist<br />  
+  The Salk Institute<br />  
+  for Biological Studies<br />
+  <br />
+  <a href="mailto:jfleischer@salk.edu">jfleischer@salk.edu</a><br />
+  <a href="cv.pdf">my CV</a><br />
+  <br />
   
   <div class="jekyll-twitter-plugin"><a class="twitter-timeline" data-width="250" data-tweet-limit="5" href="https://twitter.com/jasongfleischer?ref_src=twsrc%5Etfw">Tweets by jasongfleischer</a>
 <script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
