return title info to outside teh float

--- a/index.html
+++ b/index.html
@@ -4,16 +4,12 @@ search_exclude: true
 ---
 
 # Jason G. Fleischer, Ph.D.
+Data Scientist<br>  
+The Salk Institute for Biological Studies<br>
+<a href="mailto:jfleischer@salk.edu">jfleischer@salk.edu</a><br>
 {: style="text-align: center"}
 
-<div style="float: right align: right">
-  Data Scientist<br>  
-  The Salk Institute<br>  
-  for Biological Studies<br>
-  <br>
-  <a href="mailto:jfleischer@salk.edu">jfleischer@salk.edu</a><br>
-  <a href="cv.pdf">my CV</a><br>
-  <br>
+<div style="float: right">
   
   {% twitter https://twitter.com/jasongfleischer maxwidth=250
   align='right' limit=5 %}
