return title info to outside teh float

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@ layout: home
 search_exclude: true
 ---
 
-# Jason G. Fleischer, Ph.D.
-Data Scientist<br>  
+### Jason G. Fleischer, Ph.D.
+{: style="text-align: center"}
+
+Data Scientist<br>
 The Salk Institute for Biological Studies<br>
 <a href="mailto:jfleischer@salk.edu">jfleischer@salk.edu</a><br>
 {: style="text-align: center"}
