deploy: 4074219fbc435b75c120e8c02540c9bec119dfa2

--- a/index.html
+++ b/index.html
@@ -94,8 +94,9 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><h1 id="jason-g-fleischer-phd">Jason G. Fleischer, Ph.D.</h1>
-<p style="text-align: center">Data Scientist<br /><br />
+        <div class="home"><h3 style="text-align: center" id="jason-g-fleischer-phd">Jason G. Fleischer, Ph.D.</h3>
+
+<p style="text-align: center">Data Scientist<br />
 The Salk Institute for Biological Studies<br />
 <a href="mailto:jfleischer@salk.edu">jfleischer@salk.edu</a><br /></p>
 
